# os2mongo

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
src/os2mongo/: __init__.py  cli.py  config.py  embedder.py  engine.py  mongodb.py  opensearch.py
tests/: conftest.py  test_engine.py
transformers/: _example.py.example
